[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb_builder"
version = "0.2.0"
description = "Knowledge Base Builder"
requires-python = ">=3.8"
dependencies = [
    "markdown-it-py",
    "pathlib>=1.0.1",
    "requests",
    "python-dotenv>=0.19.0",
    "devtoolbox[llm]",
]

[project.scripts]
vuepress2dify = "kb_builder.cmd.vuepress2dify:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kb_builder"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3